# csv-pipe-playground

./: .gitignore  Makefile  Pipfile  README.md  docker-compose.yml  watch.Dockerfile  watch.py  worker.Dockerfile  worker.py
backend/: Dockerfile  pyproject.toml
backend/backend/: main.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: FileUploadTest.vue
graphql/custom-plugin/: index.js
sql/: create_tables.sql  create_tables_sample.sql
